--- a/api-reference/mocking-api/expectations-actions.mdx
+++ b/api-reference/mocking-api/expectations-actions.mdx
@@ -1,302 +1,352 @@
 ---
-title: "Expectations and Actions"
-description: "Explores the specification of method call expectations and configuration of custom actions when those expectations are met. Includes controlling call counts, specifying sequences, and advanced action composition."
+title: "Setting Expectations and Actions"
+description: "Documents the ON_CALL and EXPECT_CALL macros, sequencing, cardinality, and side-effect specification. Explains how to define what calls should occur on mocks, what actions should be performed, and how to verify call counts and order."
 ---
 
-# Expectations and Actions
+# Setting Expectations and Actions
 
-This documentation explores how to specify method call expectations and configure custom actions in GoogleMock when those expectations are met. It details techniques for controlling call counts, enforcing call sequences, and composing advanced behaviors when mocking methods.
+Understand how to precisely define the behavior and expectations of mock methods using gMock's `ON_CALL` and `EXPECT_CALL` macros. This page guides you through specifying what calls should happen, how they are sequenced, how many times they occur, and the actions executed when a call matches.
 
 ---
 
 ## Overview
 
-GoogleMock provides powerful mechanisms to specify **expectations** on mock method calls and control the **actions** performed when those expectations are triggered. This enables precise testing of how your code interacts with its dependencies — which calls happen, how many times, in what order, and with what behaviors.
+Mock objects in GoogleTest’s gMock framework enable you to specify how methods on those objects should behave when called and what calls you expect in your tests. There are two fundamental macros to define this behavior:
 
-This page covers the semantics and usage of the key constructs for expressing expectations and actions in GoogleMock, focusing on:
+- `ON_CALL`: Specifies the default action to take when the mock method is called. It sets what should happen but doesn’t enforce that the method be called.
+- `EXPECT_CALL`: Sets an expectation that the mock method *will* be called with specific arguments, the expected number of times, in a certain order if needed, and what actions to take.
 
-- Controlling *how many times* a method is expected to be called (cardinalities)
-- Specifying sequences or partial orders for expected calls
-- Configuring multiple and default actions to be performed on calls
-- Handling uninteresting or unexpected calls gracefully
+This page explains how to use these macros to define detailed mock behaviors using clauses for argument matching, cardinality (number of calls), call ordering, and side effects.
 
 ---
 
-## Setting Expectations
+## Using `EXPECT_CALL`
 
-Expectations declare how mock methods are expected to be called during test execution. They include:
+`EXPECT_CALL` is your primary tool for specifying that a mock method must be called in the test. It lets you:
 
-### Defining Expectations with `EXPECT_CALL`
+- Define argument matchers to specify which calls satisfy the expectation.
+- Set cardinalities to specify *how many* times a call is expected.
+- Specify sequences or call orders.
+- Define actions the mock method should perform when called.
 
-The macro `EXPECT_CALL(mock, Method(args...))` establishes an expectation that a mock method **will** be called with matching arguments. It can be enhanced with additional clauses that specify the expected number of calls, call order, and actions.
-
-### Call Count Control (Cardinality)
-
-Use `.Times(cardinality)` to specify *how many times* the expected call should occur. Cardinalities include:
-
-| Cardinality       | Meaning                                  |
-| ----------------- | ---------------------------------------- |
-| `AnyNumber()`     | The call can occur any number of times (including zero). |
-| `AtLeast(n)`      | The call must occur at least *n* times. |
-| `AtMost(n)`       | The call must occur at most *n* times.  |
-| `Between(m, n)`   | Call count between *m* and *n*, inclusive. |
-| `Exactly(n)` or `n` | Call must occur exactly *n* times.      |
-
-If you omit `.Times()`, GoogleMock infers it based on the number of `.WillOnce()` and `.WillRepeatedly()` clauses.
-
-### Call Ordering
-
-By default, expectations do not impose ordering on method calls.
-
-- Use `InSequence(seq1, seq2, ...)` to require calls occur in the specified sequence(s).
-- Use `.After(expectation)` to specify that an expectation can only be matched after some prior calls.
-
-The `InSequence` object scopes multiple expectations. For example:
-
-```cpp
-using ::testing::InSequence;
-{
-  InSequence s;
-  EXPECT_CALL(mock, Foo(1));
-  EXPECT_CALL(mock, Bar(_)).Times(2);
-  EXPECT_CALL(mock, Foo(2));
-}
-```
-
-This enforces that `Foo(1)` happens before two `Bar` calls, which happen before `Foo(2)`.
-
-To express partial ordering (a DAG of call constraints), you can assign expectations to multiple `Sequence` objects or specify multiple prerequisites using `.After()`.
-
-### Expectation Behavior After Saturation
-
-By default, expectations are *sticky*, meaning they remain active even after their upper bound of call count is reached, and will cause errors if calls exceed the limit.
-
-You can soften this behavior with `.RetiresOnSaturation()`. When this is specified, the expectation becomes inactive as soon as it reaches its call limit, allowing other expectations to match subsequent calls.
-
-### Using Multiple Expectations
-
-You can set multiple overlapping expectations on the same method. GoogleMock matches calls against expectations in *reverse order* of declaration, so the *newest* match is preferred.
-
-Good practice is to set more general matchers early (e.g., in the mock constructor or test fixture setup) and more specific matchers later to override behavior for some cases.
-
-### Expectation Syntax Overview
+### Syntax
 
 ```cpp
 EXPECT_CALL(mock_object, Method(matchers...))
-    .With(multi_arg_matcher)        // Optional, match all args together
-    .Times(cardinality)             // Optional, default inferred
-    .InSequence(sequences...)       // Optional, to impose call order
-    .After(expectations...)         // Optional, partial order constraints
-    .WillOnce(action)               // Optional, behavior for specific calls
-    .WillRepeatedly(action)         // Optional, behavior for additional calls
-    .RetiresOnSaturation();         // Optional, make expectation retire on limit
+    .With(multi_argument_matcher)      // Optional
+    .Times(cardinality)                // Optional
+    .InSequence(sequences...)          // Optional, multiple allowed
+    .After(expectations...)            // Optional, multiple allowed
+    .WillOnce(action)                  // Optional, multiple allowed
+    .WillRepeatedly(action)            // Optional
+    .RetiresOnSaturation();            // Optional
 ```
 
-Clause order matters: for example `.With()` must appear first if used.
+All chained clauses after `EXPECT_CALL` must appear in the order shown above.
 
-***
+### Argument Matchers
 
-## Defining Default Behavior with `ON_CALL`
+Matchers specify constraints on each argument of the mocked method.
 
-`ON_CALL(mock, Method(matchers...))` defines the **default action** for calls matching the given matchers but does **not** set any expectation or verify invocation counts.
+- You can match specific values, e.g., `EXPECT_CALL(foo, Bar(5));`
+- Use wildcards `_` to ignore particular arguments, e.g., `EXPECT_CALL(foo, Bar(_, 10));`
+- Matchers can be combined or use complex predicates, e.g., `EXPECT_CALL(foo, Bar(Gt(0), Ne(10)));`
 
-`ON_CALL` is useful to specify common fallback behaviors, e.g., in your test fixture setup, without enforcing the calls actually happen.
+If you want to apply a matcher on *all* arguments as a tuple, use `.With()` (see below).
+
+### `.With()` Clause: Matching Arguments as a Tuple
+
+Use `.With()` to restrict calls based on the entire argument tuple. It takes a matcher of type `Matcher<std::tuple<A1, ..., An>>`.
+
+Example: expect calls where the first argument is less than the second:
+
+```cpp
+using ::testing::Lt;
+EXPECT_CALL(mock, SetPosition(_, _))
+    .With(Lt());
+```
+
+This matches calls where the complete tuple matches the predicate.
+
+### `.Times()` Clause: Specifying Call Cardinality
+
+Controls *how many times* the call is expected to occur.
+
+Common cardinalities (from the `::testing` namespace):
+
+| Cardinality        | Behavior                                     |
+|--------------------|----------------------------------------------|
+| `AnyNumber()`       | Call may occur any number of times (including zero). |
+| `AtLeast(n)`        | Call occurs at least *n* times.               |
+| `AtMost(n)`         | Call occurs at most *n* times.                |
+| `Between(m, n)`     | Call occurs between *m* and *n* times, inclusive. |
+| `Exactly(n)` or `n` | Called exactly *n* times; `0` means disallow call. |
+
+If omitted, `gMock` infers the cardinality based on whether `WillOnce()` and `WillRepeatedly()` clauses are used.
+
+
+### `.InSequence()` Clause: Ordering Calls
+
+Enables specifying that calls are expected to occur in a particular sequence.
+
+- Pass one or more `Sequence` objects.
+- Calls assigned to the same sequence must occur in the order the expectations were defined.
 
 Example:
 
 ```cpp
-ON_CALL(mock, Foo(_, 42)).WillByDefault(Return(true));
+Sequence s1, s2;
+EXPECT_CALL(mock, Init()).InSequence(s1, s2);
+EXPECT_CALL(mock, Step1()).InSequence(s1);
+EXPECT_CALL(mock, Step2()).InSequence(s2);
 ```
 
-If no matching `EXPECT_CALL` exists for a call, the action defined by the last matching `ON_CALL` will be taken.
+Here, `Init()` must be called before both `Step1()` and `Step2()`, but the relative order of the last two is not specified.
 
-`ON_CALL` has syntax:
-
-```cpp
-ON_CALL(mock_object, Method(matchers...))
-    .With(multi_arg_matcher)    // Optional
-    .WillByDefault(action);     // Required
-```
-
----
-
-## Actions
-
-Actions define what a mocked method does when called.
-
-You can specify **actions** with:
-
-- `.WillOnce(action)`: Executes the specified action for the next matched call only.
-- `.WillRepeatedly(action)`: Executes the specified action for all subsequent matched calls after `.WillOnce`s are exhausted.
-- `.WillByDefault(action)`: Sets the default action for `ON_CALL`.
-
-### Common Built-in Actions
-
-| Action                     | Description                                    |
-| -------------------------- | ---------------------------------------------- |
-| `Return(value)`            | Returns the specified `value` from the mock method. |
-| `ReturnRef(variable)`      | Returns a reference to `variable`.
-| `ReturnPointee(pointer)`   | Returns the value pointed to by `pointer` at call time.
-| `DoDefault()`              | Uses the default action from `ON_CALL` or built-in default.
-| `Invoke(function/functor)` | Calls a function or functor with the mock arguments.
-| `InvokeWithoutArgs()`      | Calls a nullary function/functor ignoring mock arguments.
-| `InvokeArgument<N>(args...)` | Calls the callable argument at position `N` with given `args`.
-| `SetArgPointee<N>(value)` | Sets the output pointed argument `N` to `value`.
-| `SaveArg<N>(&var)`         | Saves the `N`th argument into the variable.
-| `Throw(exception)`         | Throws the specified exception.
-| `DoAll(a1, a2, ..., an)`   | Performs all listed actions sequentially; returns the last's value.
-| `IgnoreResult(action)`     | Performs the given action but ignores its return value.
-| `WithArg<N>(action)`       | Invokes `action` with the `N`th argument.
-| `WithArgs<N1, N2,...>(action)` | Invokes `action` with selected arguments.
-
-### Actions from Callables
-
-You can specify any pre-existing callable (function, lambda, functor) as an action.
-
-Example:
-
-```cpp
-EXPECT_CALL(mock, Foo(_)).WillOnce(Invoke([](int x) { return x * 2; }));
-```
-
-### Combining Actions
-
-Use `DoAll` to perform multiple actions in order when a single call happens.
-
-Example:
-
-```cpp
-EXPECT_CALL(mock, Mutate(_))
-    .WillOnce(DoAll(SetArgPointee<0>(5), Return(true)));
-```
-
-In this example, an output argument is set and a value is returned.
-
----
-
-## Handling Uninteresting and Unexpected Calls
-
-### Uninteresting Calls
-
-Calls to mock methods for which there is no `EXPECT_CALL` are known as *uninteresting*. By default, GoogleMock will:
-
-- Perform the default action (if any)
-- Print a warning message
-
-You can adjust this using wrappers like `NiceMock` (suppress warnings) or `StrictMock` (treat as errors).
-
-### Unexpected Calls
-
-Calls that match no expectations (or exceed the set call count) are *unexpected* and cause test failures.
-
-To reduce false negatives:
-
-- Use `.Times(AnyNumber())` on catch-all expectations for methods where calls are allowed but not of direct interest.
-- Use `ON_CALL` to provide default actions without constraints.
-
----
-
-## Practical Usage Patterns
-
-### Specifying Sequences with `InSequence`
-
-Wrap related `EXPECT_CALL`s with an `InSequence` object to enforce strict call order:
+You can also achieve the same effect by creating an `InSequence` block, which assigns all `EXPECT_CALL`s inside it to a synthetic sequence.
 
 ```cpp
 {
   InSequence seq;
-  EXPECT_CALL(mock, FirstCall());
-  EXPECT_CALL(mock, SecondCall());
-  EXPECT_CALL(mock, ThirdCall());
+  EXPECT_CALL(mock, Start());
+  EXPECT_CALL(mock, Process());
+  EXPECT_CALL(mock, End());
 }
 ```
 
-### Using `After` for Partial Orders
+---
 
-Combine expectations with `.After(...)` to create partial order constraints when strict sequences are too brittle.
+### `.After()` Clause: Partial Order Constraints
 
-### Retiring Expectations
+Allows specifying that an expectation must occur *after* one or more other expectations have been satisfied.
 
-Use `.RetiresOnSaturation()` to make an expectation inactive after it reaches its call limit. This prevents errors when multiple similar calls occur.
-
-### Combining Multiple Actions
-
-Use `.WillOnce()` multiple times to specify actions for successive calls.
+- Can take up to 5 `Expectation` or `ExpectationSet` objects.
+- Enables specifying a partial ordering (DAG) of expected calls.
 
 Example:
 
 ```cpp
-EXPECT_CALL(mock, GetValue())
-    .WillOnce(Return(10))
-    .WillOnce(Return(20))
-    .WillRepeatedly(Return(30));
+Expectation initX = EXPECT_CALL(mock, InitX());
+ExpectationSet allInits;
+allInits += EXPECT_CALL(mock, Init1());
+allInits += EXPECT_CALL(mock, Init2());
+EXPECT_CALL(mock, Run()).After(initX, allInits);
 ```
 
-### Using Default Actions with `ON_CALL`
-
-Set fallback behavior common to many tests or shared by tests without explicit expectations.
+`Run()` will only be expected after `initX` and all `Init1()` and `Init2()` calls have occurred.
 
 ---
 
-## Troubleshooting & Best Practices
+### `.WillOnce()` and `.WillRepeatedly()` Clauses: Defining Actions
 
-- **Set Expectations Before Calls:** Always set `EXPECT_CALL` **before** exercising the code to avoid undefined behavior.
+Used to specify what the mocked method should do when called:
 
-- **Avoid Over-Specification:** Use `ON_CALL` for default behavior and `EXPECT_CALL` only when verifying a call.
+- `.WillOnce(action)`: Action to perform on a single call. Can appear multiple times, and each call performs the next action in order.
+- `.WillRepeatedly(action)`: Action to perform on all subsequent calls after all `WillOnce()` actions are used. Can appear at most once.
 
-- **Account for Call Counts:** When expecting multiple calls with different behaviors, use `.WillOnce()` for each specific call and `.WillRepeatedly()` for the default behavior.
+If neither are specified, gMock uses the default action for the return type (e.g., return 0 or default-constructed value).
 
-- **Suppress Warnings When Needed:** Use `NiceMock` to suppress warnings for uninteresting calls.
+Examples:
 
-- **Use Sequences Judiciously:** Enforce order only when it matters for test robustness.
+```cpp
+EXPECT_CALL(mock, GetX())
+    .WillOnce(Return(100))
+    .WillOnce(Return(150))
+    .WillRepeatedly(Return(200));
+```
 
-- **Use `.RetiresOnSaturation()` to avoid sticky expectations causing unexpected failures when call count limits are reached.
+This means:
 
-- **Check for Unintended Uninteresting Calls:** When warnings appear for uninteresting calls, confirm if you need to add expectations or default behavior.
+- First call returns 100
+- Second call returns 150
+- All subsequent calls return 200
 
-- **Avoid Overly Complex Matchers:** Use simple matchers or combine multiple into `.With()` when argument relations matter.
+Another example without `WillRepeatedly`:
+
+```cpp
+EXPECT_CALL(mock, GetX())
+    .WillOnce(Return(100))
+    .WillOnce(Return(200));
+```
+
+Expected to be called exactly twice, returning 100 then 200.
+
+---
+
+### `.RetiresOnSaturation()` Clause: Deactivating Expectation Early
+
+Marks that once the expectation has been *saturated* (the upper bound of its call count is reached), it will no longer be active. This is useful when you expect an exact number of calls and want subsequent matching calls to be handled by other expectations.
+
+Example:
+
+```cpp
+EXPECT_CALL(mock, SetValue(_))  // Expectation 1
+    .Times(AnyNumber());
+EXPECT_CALL(mock, SetValue(7))  // Expectation 2
+    .Times(2)
+    .RetiresOnSaturation();
+```
+
+The first two calls to `SetValue(7)` match Expectation 2, which will retire after saturation, so a third call would match Expectation 1.
+
+---
+
+## Using `ON_CALL`
+
+`ON_CALL` configures the **default behavior** of mock methods for calls that do not match any `EXPECT_CALL`. It does **not** set any expectation about calls occurring.
+
+Syntax:
+
+```cpp
+ON_CALL(mock_object, Method(matchers...))
+    .With(multi_argument_matcher)  // Optional
+    .WillByDefault(action);        // Required
+```
+
+Unlike `EXPECT_CALL`, `ON_CALL` is used mainly to avoid undesired warnings and provide reasonable default behavior for mock methods.
+
+Example:
+
+```cpp
+ON_CALL(mock, GetValue()).WillByDefault(Return(42));
+```
+
+Means any call to `GetValue()` without a matching expectation will return 42 by default.
+
+### `.With()` Clause in `ON_CALL`
+
+Same as for `EXPECT_CALL`, restricts the default behavior change to calls where the argument tuple matches the provided matcher.
+
+---
+
+## Practical Tips and Best Practices
+
+- **Set expectations (`EXPECT_CALL`) before exercising code.** `EXPECT_CALL` must precede calls to mock methods to avoid undefined behavior.
+- **Use `ON_CALL` for default behavior, `EXPECT_CALL` only for calls you want to verify.** Lend your tests flexibility and avoid over-specification.
+- **Order of expectations matters:** Later `EXPECT_CALL`s override earlier ones. For specific behavior, define expectations in the right order or use sequences.
+- **Use `InSequence` or `After` to control call ordering** when order matters.
+- **Be mindful of cardinalities**; incorrect cardinalities lead to errors if calls happen too frequently or too infrequently.
+- **Use `.RetiresOnSaturation()` to avoid over-saturation errors when expecting limited repeated calls.**
+- **Specify actions carefully.** Remember that each `WillOnce` is consumed per call. Without `WillRepeatedly`, excess calls will fall back to default actions.
+- **Avoid side effects in action specification expressions.** Expressions inside `WillOnce` are evaluated once during expectation setup, not on every call.
+- **Keep expectations readable and maintainable.** Use matchers and multi-argument matchers to avoid brittle tests.
+
+---
+
+## Common Error Scenarios and Troubleshooting
+
+| Scenario                                      | Description and Advice
+| --------------------------------------------- | ---------------------------------------------------------------------------------------------------------------
+| **Call too few times**                        | Your code called the mock method fewer times than expected. The test will fail at verification or teardown.
+| **Call too many times (over-saturation)**   | The mock method was called more than the expected number of times. This will fail unless `.RetiresOnSaturation()` is used.
+| **Unexpected call**                          | A call occurred that did not match any `EXPECT_CALL`. Check if you forgot to add an expectation, or if the call is unexpected.
+| **Arguments do not match expectation**      | The call was made, but the arguments did not satisfy the matchers. Use verbose output (`--gmock_verbose=info`) to debug.
+| **Uninteresting call warnings**              | You called a mock method with no `EXPECT_CALL`. This is allowed but warns by default. Use `NiceMock` or add catch-all expectations if unwanted.
+| **Out-of-order calls**                        | Expected calls occurred out of sequence despite an ordering requirement. Make sure you correctly specified sequences or `.After()`.
 
 
 ---
 
-## Example: Expecting Ordered Calls with Specific Behaviors
+## Example Usage Patterns
+
+### Basic Expectation with Return Values
+
+```cpp
+using ::testing::Return;
+using ::testing::_;
+
+MockTurtle turtle;
+
+EXPECT_CALL(turtle, GetX())
+    .Times(3)
+    .WillOnce(Return(100))
+    .WillOnce(Return(150))
+    .WillRepeatedly(Return(200));
+
+// Calls:
+int x1 = turtle.GetX();  // 100
+int x2 = turtle.GetX();  // 150
+int x3 = turtle.GetX();  // 200
+int x4 = turtle.GetX();  // 200
+```
+
+### Specifying Order with `InSequence`
 
 ```cpp
 using ::testing::InSequence;
-using ::testing::Return;
 
 {
-  InSequence s;
-  EXPECT_CALL(mock, MethodA()).WillOnce(Return(true));
-  EXPECT_CALL(mock, MethodB(5)).WillOnce(Return(10));
-  EXPECT_CALL(mock, MethodB(6)).WillRepeatedly(Return(20));
+  InSequence seq;  // All EXPECT_CALLs below form a sequence.
+
+  EXPECT_CALL(turtle, PenDown());
+  EXPECT_CALL(turtle, Forward(100));
+  EXPECT_CALL(turtle, PenUp());
 }
 
-// Calls must occur in this order with specified returns.
-EXPECT_TRUE(mock.MethodA());
-EXPECT_EQ(10, mock.MethodB(5));
-EXPECT_EQ(20, mock.MethodB(6));
-EXPECT_EQ(20, mock.MethodB(6));
+// The following call order is valid:
+turtle.PenDown();
+turtle.Forward(100);
+turtle.PenUp();
+
+// Out-of-order or missing calls will fail.
+```
+
+### Partial Ordering with `.After()`
+
+```cpp
+Expectation e1 = EXPECT_CALL(mock, InitA());
+Expectation e2 = EXPECT_CALL(mock, InitB());
+EXPECT_CALL(mock, Process()).After(e1, e2);
+
+// Process() will only be allowed after InitA() and InitB() have finished.
+```
+
+### Defining Default Behavior with `ON_CALL`
+
+```cpp
+using ::testing::Return;
+
+ON_CALL(turtle, GoTo(_, _))
+    .WillByDefault(Return());
+
+// No EXPECT_CALL needed if you don't want to verify calls, but want to avoid warnings or change behavior.
 ```
 
 ---
 
-## Summary
+## Related Concepts
 
-This page presented how GoogleMock enables:
-
-- Precise specification and verification of method call expectations.
-- Control over call counts using cardinalities.
-- Imposition of strict or partial call ordering.
-- Customization of mock method behavior using a rich set of built-in and user-defined actions.
-- Managing uninteresting and unexpected calls to improve test robustness.
+- **Matchers:** Detailed list of built-in and custom matchers available to specify argument constraints.
+- **Actions:** Built-in and custom actions usable with `WillOnce` and `WillRepeatedly` to define behavior.
+- **Cardinalities:** How to fine-tune call count requirements using `Times` with `AtLeast`, `AtMost`, `Exactly`, and more.
+- **Sequences and Partial Ordering:** Mechanisms to express call order requirements.
+- **`NiceMock`, `NaggyMock`, and `StrictMock`:** Ways to control behavior and warnings on uninteresting calls.
 
 ---
 
 ## See Also
 
-- [gMock Cookbook](gmock_cook_book.md) — Recipes and practical tips for mocking
-- [Mocking Reference](docs/reference/mocking.md) — Deeper overview of mocks, macros, and methods
-- [Actions Reference](docs/reference/actions.md) — Comprehensive list of built-in actions
-- [Matchers Reference](reference/matchers.md) — Techniques to specify argument matchers
-- [gMock for Dummies](docs/gmock_for_dummies.md) — Beginner-friendly introduction
+- [Basic Mocking with GoogleMock](../getting-started/configuration-and-first-use/using-googlemock-basics)
+- [Mocking Methods and Classes](../api-reference/mocking-api/mock-methods)
+- [Matchers and Verification](../api-reference/matchers-api/builtin-matchers)
+- [Actions Reference](actions.md)
+- [Using Matchers Guide](guides/core-test-workflows/using-matchers)
+
+---
+
+## Summary
+This page equips you to define and control mock interactions precisely in your tests using `EXPECT_CALL` and `ON_CALL`. It explains how to set argument matchers, control call frequency, specify call ordering with sequences or dependencies, and set the actual behavior the mock performs when called.
+
+With concrete examples and explanations of cardinalities, sequences, and actions, you gain mastery for writing dependable and maintainable mock-based tests.
+
+---
+
+<Info>
+For advanced ordering and sequencing, explore the `Sequence` and `ExpectationSet` classes. To debug matching and ordering issues, use the `--gmock_verbose=info` flag to trace call matches.
+</Info>
+
+<Warning>
+Always specify expectations before exercising your code. Writing expectations after calls can lead to undefined behavior.
+</Warning>
+
+---
